--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ flake8 = "^6.0.0"
 pytest = "^7.3.2"
 mock = "^5.0.2"
 pytest-cov = "^4.1.0"
+isort = "^5.12.0"
 
 [build-system]
 requires = ["poetry-core"]
