--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,15 @@
 {
     "editor.rulers": [
         88
-    ]
+    ],
+    "files.exclude": {
+        ".coverage": true,
+        "**/__pycache__": true,
+        "**/.pytest_cache": true,
+        "coverage.xml": true,
+    },
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter"
+    },
+    "python.formatting.provider": "black"
 }
